test/error/iface/err10.rzy
interface
  Iface
    function funcA();
    function funcB();
  end

component
  Sub
    output
      out: Iface;
      
    implementation elementary
  end

  Err10
    implementation elementary
    
    component
      a : Sub;

    function a.out.funcA()
    end

    function a.out.funcB()
    end

    function a.out2.funcA()
    end

  end

